fix form padding on mobile

--- a/style.css
+++ b/style.css
@@ -15,8 +15,6 @@
 body {
   background-image: linear-gradient(300deg, #507494, #34495e);
   color: white;
-  /* max-width: 80%;
-  margin: auto; */
 }
 
 img {
@@ -346,6 +344,11 @@ footer h2 {
 
   .description {
     order: 1;
+    text-align: justify;
+  }
+
+  .intro-photo {
+    justify-content: center;
   }
 
   .grid-container #skill-1 {
@@ -385,6 +388,7 @@ footer h2 {
 
   form {
     width: auto;
+    padding: 20px;
   }
 
   form button {
